--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style>
+            @font-face {
+                font-family: D-Din;
+                src: url(./d-din/D-DINCondensed.otf);
+            }
+            @font-face {
+                font-family: D-Din-Bold;
+                font-weight: bold;
+                src: url(./d-din/D-DINCondensed-Bold.otf);
+            }
+        </style>
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -26,7 +37,7 @@
     -->
         <title>SpaceX</title>
     </head>
-    <body style="background-color: black">
+    <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!--
